expected/main/lc/large-literals32a.err
ERROR: "actual/main/lc/large-literals32a.llc", line 3
  bigs = f 0Xcafebabe9
           ^
Literal is too large (limit is 4294967295)

ERROR: "actual/main/lc/large-literals32a.llc", line 4
         (f 0xcafebabe9
            ^
Literal is too large (limit is 4294967295)

ERROR: "actual/main/lc/large-literals32a.llc", line 5
         (f 0xAaBbCcDdEeFf00
            ^
Literal is too large (limit is 4294967295)

ERROR: "actual/main/lc/large-literals32a.llc", line 6
            0XAaBbCcDdEeFf00))
            ^
Literal is too large (limit is 4294967295)

ERROR: "actual/main/lc/large-literals32a.llc", line 6
            0XAaBbCcDdEeFf00))
                            ^
Trailing token(s) (close parenthesis, ")") at end of input

ERROR: Aborting after 5 previously reported errors

